# extractor

./: .example.env  .gitignore  baml.ipynb  baml.py  blazegraph_client.py  crawl.py  llm_api.ipynb  pdf_extraction.ipynb  pydantic_to_sparql.ipynb  pyproject.toml  run_preprocessing.ipynb  scripts.py
baml_client/: async_client.py  inlinedbaml.py  partial_types.py  sync_client.py  type_builder.py  types.py
baml_src/: module_catalog.baml
baml_tests/: 24-11-09_01_parsed_test.json  24-11-09_02_parsed_test_mmds_full.json  24-11-09_03_parsed_test_mmds_full.json  mmds_newest_unstructured.txt  observations.md
experiments/: llm_api.ipynb  pdf_extraction.ipynb
experiments/baml_tests/: 24-11-10_01_mmds_full_claude.json  24-11-11_01_mmds_full_4omini.json  24-11-11_02_mmds_full_4omini_tables.json  catalog.json  mmds_newest_table_structure.txt
ontology/: ontology-full.ttl  ontology-reasoned.owl  ontology-reasoned.rdf  ontology-reasoned.ttl  ontology-with-individuals.ttl  ontology.ttl
output/20241112_000328/: catalog_overview.json  merged_additional.txt  split_10_modules.txt  split_12_modules.txt  split_2_modules_list.json  split_4_modules.txt
output/20241118_222726_MMDS/: catalog_overview.json  merged_modules.json  split_10_modules_list.json  split_11_additional.txt  split_12_modules_list.json  split_13_modules_list.json  split_14_additional.txt  split_1_additional.txt  split_2_modules_list.json  split_4_modules_list.json  split_5_additional.txt  split_6_modules.txt  (+3 more)
sparql/: count_riples.ipynb  pydantic_to_sparql.ipynb  pydantic_to_sparql_many.ipynb
(+212 files in other folders)
