[tool.poetry]
name = "module-catalog-extractor"
version = "0.1.0"
description = ""
authors = ["Yannik Hahn <yannihahn@t-online.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
