[tool.poetry]
name = "module-catalog-extractor"
version = "0.1.0"
description = ""
authors = ["Yannik Hahn <yannihahn@t-online.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
openai = "^1.52.2"
pdfplumber = "^0.11.4"
baml-py = "^0.67.0"
anthropic = "^0.39.0"
tiktoken = "^0.8.0"
python-dotenv = "^1.0.1"
rdflib = "^7.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
